# newsie

./: .env.example  .gitignore  README.md  paperboy.py  pyproject.toml
docs/: AUTH.md  GETTING STARTED.md  QUEUE.md
newsie/: core.py  helpers.py
paperboy/: core.py  helpers.py
